# hybridzip

./: .env  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  main.cpp
other/argparse/: CMakeLists.txt  argparse.h
other/loguru/: CMakeLists.txt  loguru.cpp
other/loguru/src/: loguru.cpp
other/rainman/: CMakeLists.txt  memmgr.h
other/tensorflow/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  terminal.h
src/hzip/: CMakeLists.txt
src/hzip/api/: api.cpp  api.h  api_enums.h  stream.cpp  stream.h
src/hzip/api/handlers/: query.cpp  query.h  socket_class.cpp  socket_class.h  stream.cpp  stream.h  streamer.cpp  streamer.h
src/hzip/api/providers/: archive_provider.cpp  archive_provider.h
src/hzip/archive/: archive.cpp  archive.h  archive_trie.h
src/hzip/archiver/: archive.cpp  archive.h  archiver.h  hzarchiver.h  hzdirtree.h
src/hzip/bitio/: bitio.cpp  bitio.h  bitio_buffer.cpp  bitio_byte_dumper.cpp
src/hzip/compute/: dct.cpp  dct.h  matrix_ops.h  vector_utils.h
src/hzip/core/blob/: blob.h  hzbatchprocessor.h  hzblob.h  hzblobpack.cpp  hzblobpack.h  hzmthread.h
src/hzip/core/compressors/: Victini.cpp  Victini.h  algorithms.h  compressor_base.h  compressor_enums.h  compressors.h  dark_ninja.cpp  dark_ninja.h  dark_ninja_compressor.h  sharingan.cpp  sharingan.h  victini.cpp  victini.h  white_rose.cpp  white_rose.h  white_rose_compressor.h
src/hzip/core/entropy/hzrans/: hzbin.cpp  hzbin.h  hzmthread.cpp  hzmthread.h  hzrans.h  hzrans64.cpp  hzrans64.h  hzrans64avx.h  hzrbin.h  hzrbyte.h  hzrmthread.h
src/hzip/core/models/: FirstOrderContextModel.cpp  FirstOrderContextModel.h  first_order_context_model.cpp  first_order_context_model.h  models.h  pivoted_gaussian_model.cpp  pivoted_gaussian_model.h  single_order_context_model.h  vtrie.h
src/hzip/core/preprocessor/: BurrowsWheelerTransformer.h  DeltaTransformer.cpp  DeltaTransformer.h  MoveToFrontTransformer.h  ZigZagTransformer.h  burrows_wheeler_transform.h  bw_transformer.cpp  bw_transformer.h  color.h  delta.h  delta_transform.h  delta_transformer.cpp  delta_transformer.h  jpeg_codec.h  move_to_front.h  move_to_front_transform.h  mtf_transformer.cpp  mtf_transformer.h  png_bundle.h  png_codec.h  transforms.h  types.h  zigzag.h  zigzag_transform.h
src/hzip/core/utils/: boost_utils.h  distribution.h  unary.h
src/hzip/dispatcher/: dispatcher.cpp  dispatcher.h  job.h
src/hzip/driver/: main.cpp
src/hzip/errors/: api.h  archive.h  compression.h  memory.h  processor.h  transform.h  utils.h
src/hzip/log/: global_logger.h  logger.cpp  logger.h
src/hzip/memory/: mem_interface.h  memmap.cpp  memmap.h  memmgr.cpp  memmgr.h
src/hzip/processor/: dispatcher.cpp  dispatcher.h  job.h  processor.cpp  processor.h
src/hzip/utils/: avx2utils.h  boost_utils.h  common.h  constants.h  distribution.h  errors.h  fast_math.h  fsutils.h  light_stack.h  platform.h  stack.h  unary.h  utils.h  validation.h
src/hzip_codec/: CMakeLists.txt  codec_provider.cpp  codec_provider.h  compressor_base.h  compressor_enums.h  compressors.h  executor.h
src/hzip_codec/errors/: codec.h  opencl.h  processor.h
src/hzip_codec/opencl/: cl_helper.cpp  cl_helper.h
src/hzip_codec/processor/: job.h  processor.cpp  processor.h
src/hzip_codec/sharingan/: CMakeLists.txt  sharingan.cpp  sharingan.h  sharingan_dynamic.cl  state_transition.cpp  state_transition.h
src/hzip_codec/uncompressed/: CMakeLists.txt  uncompressed.cpp  uncompressed.h
src/hzip_codec/victini/: CMakeLists.txt  victini.cpp  victini.h
src/hzip_core/: CMakeLists.txt  config.cpp  config.h  executor.h  runtime.cpp  runtime.h
src/hzip_core/blob/: blob.cpp  blob.h
src/hzip_core/core/blob/: blob.h
src/hzip_core/core/compressors/: compressor_base.h  compressor_enums.h  sharingan.cpp  sharingan.h  uncompressed.h  victini.cpp  victini.h
src/hzip_core/core/models/: first_order_context.cpp  first_order_context.h
src/hzip_core/core/preprocessor/: burrows_wheeler.h  move_to_front.h  png_bundle.h
src/hzip_core/errors/: compression.h  opencl.h  processor.h  transform.h  utils.h
src/hzip_core/kernel/hzrans/: hzrans.h  hzrans64.cpp  hzrans64.h  hzrans64_codec.cpp  hzrans64_codec.h
src/hzip_core/models/: first_order_context.cpp  first_order_context.h  models.h  paeth.cl  paeth.cpp  paeth.h
src/hzip_core/opencl/: cl_helper.cpp  cl_helper.h  hzrans64.cl  rgb_ycocg.cl  types.cl
src/hzip_core/opencl/common/: extended_types.cl
src/hzip_core/opencl/kernel/: hzrans64.cl
src/hzip_core/preprocessor/: burrows_wheeler.h  color.cpp  color.h  delta.cpp  jpeg_codec.h  png_bundle.cpp  png_bundle.h  rgb_ycocg.cl  transforms.h
src/hzip_core/processor/: job.h  processor.cpp  processor.h
src/hzip_core/runtime/: cache_provider.cpp  cache_provider.h  config.cpp  config.h  executor.h  runtime.h
src/hzip_core/utils/: common.h  distribution.h  fsutils.h  platform.h  semaphore.cpp  semaphore.h  stack.h  utils.h  validation.h
src/hzip_network/: CMakeLists.txt
src/hzip_network/api/: api.cpp  api.h
src/hzip_network/api/handlers/: query.cpp  query.h  socket_class.cpp  socket_class.h  streamer.cpp  streamer.h
src/hzip_network/api/providers/: archive_provider.cpp  archive_provider.h
src/hzip_network/errors/: api.h
src/hzip_storage/: CMakeLists.txt
src/hzip_storage/archive/: archive.cpp  archive.h  archive_trie.h
src/hzip_storage/errors/: archive.h
src/other/: CMakeLists.txt
src/other/bitio/: CMakeLists.txt  bitio.h
src/other/yajl/: CMakeLists.txt  yajl.h
tests/: CMakeLists.txt  burrows_wheeler_transform.cpp  debug.cpp  memory_test.cpp  move_to_front_transform.cpp  victini_codec.cpp
tests/hzip/: api.cpp  archive.cpp  burrows_wheeler_transform.cpp  memory.cpp  move_to_front_transform.cpp  sharingan_codec.cpp  victini_codec.cpp  zigzag_transform.cpp
tests/hzip_codec/: sharingan_codec.cpp  victini_codec.cpp
tests/hzip_core/: burrows_wheeler_transform.cpp  color_transform.cpp  move_to_front_transform.cpp  paeth_differential.cpp  zigzag_transform.cpp
tests/lib/googlemock/src/: gmock-matchers.cc
tests/tensorflow/: tensorflow_test.cpp
(+120 files in other folders)
